# stiebel_eltron_isg_component

./: .devcontainer-lock.json  .devcontainer.json  .gitignore  .ruff.toml  CONTRIBUTING.md  LICENSE  MIGRATION_PYSTIEBELELTRON_0_5_1.md  README.md  configuration.yaml  hacs.json  info.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg
.devcontainer/: configuration.yaml  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: lint.yml  lint_test.yml  pull.yml  push.yml  release.yaml  release.yml  validate.yml
config/: configuration.yaml
custom_components/stiebel-eltron-isg/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  entity.py  manifest.json  sensor.py  switch.py  switch.py.old
custom_components/stiebel-eltron-isg/translations/: de.json  en.json
custom_components/stiebel_eltron_isg/: __init__.py  binary_sensor.py  button.py  client_bridge.py  climate.py  config_flow.py  const.py  coordinator.py  data.py  diagnostics.py  entity.py  icons.json  lwz_coordinator.py  manifest.json  number.py  power_consumption.py  probe.py  select.py  sensor.py  strings.json  switch.py  wpm3i.py  wpm3i_coordinator.py  wpm_api.py  wpm_coordinator.py
custom_components/stiebel_eltron_isg/python_stiebel_eltron/: __init__.py  lwz.py  wpm.py
custom_components/stiebel_eltron_isg/translations/: cz.json  de.json  en.json  fr.json  it.json  pt.json  sk.json
scripts/: lint  setup
tests/: README.md  __init__.py  conftest.py  const.py  test_api.py  test_climate.py  test_config_flow.py  test_entity.py  test_init.py  test_number.py  test_power_consumption.py  test_sensor.py  test_switch.py
